# ImFiddle

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
ImFiddle/: CMakeLists.txt  Canvas.h  ImConfig.h  Main.cpp  Module.cpp  Module.h  PlatformLinux.cpp  PlatformWin.cpp  Shared.cpp
ImFiddle/Sketches/: Template.cpp
vcpkg-triplets/: x64-linux-dynamic-release.cmake
